Refactored folder structure

--- a/views/index.html
+++ b/views/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
     <title>BIANCA | A Portfolio Website</title>
 </head>
 <body>
-    <a href="#shome" id="back2top"><img src="./images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="./../images/arrow.png"></a>
     <div id="navbar">
-        <a id="link1" href="#shome"><img src="./images/bcm-logo.png"></a>
+        <a id="link1" href="#shome"><img src="./../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="#labout">ABOUT</a>
         <a class="links" id="link3" href="#lworks">WORKS</a>
         <a class="links" id="link4" href="#lcontact">CONTACT</a>
     </div>
     <div id="shome">
         <div class="left">
-            <img id="logo" src="./images/bcm-logo2.png">
+            <img id="logo" src="../images/bcm-logo2.png">
         </div>
         <div class="right">
             <h1 id="hello">hello</h1>
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="right">
-            <img id="aboutpic" src="./images/prof.jpg">
+            <img id="aboutpic" src="../images/prof.jpg">
         </div>
     </div>
     <div class="label" id="lworks">
@@ -49,62 +49,62 @@
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img src="./images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
+            <img src="../images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
             <div class="overlay">
                 <h2>Red Ribbon - Every Moment Sweeter<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/rr-ems-cbt.html"><i>more >> </i></a>
+                    <a href="../views/works/rr-ems-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
+            <img src="../images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
             <div class="overlay">
                 <h2>Patikim, Pokie - Contributions<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/patikim-pokie-contributions.html"><i>more >> </i></a>
+                    <a href="../views/works/patikim-pokie-contributions.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
+            <img src="../images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
             <div class="overlay">
                 <h2>Metro Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="./works/metro-magazine-compre.html"><i>more >> </i></a>
+                    <a href="../views/works/metro-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
+            <img src="../images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
             <div class="overlay">
                 <h2>Manila Zoo Wayfinding Style Guide<br><span>Branding</span></h2>
                 <p>
-                    <a href="./works/manila-zoo-wayfinding.html"><i>more >> </i></a>
+                    <a href="../views/works/manila-zoo-wayfinding.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
+            <img src="../images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
             <div class="overlay">
                 <h2>Earth Hour Interactive Poster<br><span>Print Design</span></h2>
                 <p>
-                    <a href="./works/earth-hour-interactive-poster.html"><i>more >> </i></a>
+                    <a href="../views/works/earth-hour-interactive-poster.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
+            <img src="../images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
                 <h2>Bruno Mars Discography<br><span>Infographic</span></h2>
                 <p>
-                    <a href="./works/bruno-mars-discography.html"><i>more >> </i></a>
+                    <a href="../views/works/bruno-mars-discography.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
     </div>
     <div id="mworks">
-        <a href="works.html">SEE ALL</a>
+        <a href="../views/works.html">SEE ALL</a>
     </div>
     <div class="label" id="lcontact">
         <h1>contact</h1>
@@ -115,11 +115,11 @@
                 Also open for all other inquiries.. <br>and free airline tickets. ;)
             </p>
             <div class="socials">
-                <a target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="./images/sicon-in.png"></a>
-                <a target="_blank" href="https://www.behance.net/biancacmatira"><img src="./images/sicon-be.png"></a>
-                <a target="_blank" href="https://github.com/biancacmatira"><img src="./images/sicon-gh.png"></a> 
-                <a target="_blank" href="https://www.instagram.com/_biancamatira"><img src="./images/sicon-ig.png"></a>
-                <a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="./images/sicon-yt.png"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="../images/sicon-in.png"></a>
+                <a target="_blank" href="https://www.behance.net/biancacmatira"><img src="../images/sicon-be.png"></a>
+                <a target="_blank" href="https://github.com/biancacmatira"><img src="../images/sicon-gh.png"></a> 
+                <a target="_blank" href="https://www.instagram.com/_biancamatira"><img src="../images/sicon-ig.png"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="../images/sicon-yt.png"></a>
             </div>
         </div>
         <div class="right">
@@ -163,6 +163,6 @@
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
-    <script src="./scripts/main.js"></script>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
