--- a/views/works.html
+++ b/views/works.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
     <title>BIANCA | Works</title>
 </head>
 <body>
-    <a href="#shome" id="back2top"><img src="./images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="./../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="index.html"><img src="./images/bcm-logo.png"></a>
+        <a id="link1" href="index.html"><img src="./../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="#lworks">WORKS</a>
         <a class="links" id="link4" href="index.html#lcontact">CONTACT</a>
@@ -24,192 +24,191 @@
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img src="./images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
+            <img src="../images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
             <div class="overlay">
                 <h2>Red Ribbon - Every Moment Sweeter<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/rr-ems-cbt.html"><i>more >> </i></a>
+                    <a href="../views/works/rr-ems-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/rc-cv0.jpg" alt="Rocket Concepts - Core Values">
+            <img src="../images/works/rc-cv0.jpg" alt="Rocket Concepts - Core Values">
             <div class="overlay">
                 <h2>Rocket Concepts - Core Values<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/rc-corevalues-cbt.html"><i>more >> </i></a>
+                    <a href="../views/works/rc-corevalues-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/rr-fm0.jpg" alt="Red Ribbon - Shop Floor Management">
+            <img src="../images/works/rr-fm0.jpg" alt="Red Ribbon - Shop Floor Management">
             <div class="overlay">
                 <h2>Red Ribbon - Shop Floor Management<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/rr-sfm-cbt.html"><i>more >> </i></a>
+                    <a href="../views/works/rr-sfm-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/jfc-tqa0.jpg" alt="JFC - Total Quality Assurance">
+            <img src="../images/works/jfc-tqa0.jpg" alt="JFC - Total Quality Assurance">
             <div class="overlay">
                 <h2>JFC - Total Quality Assurance<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/jfc-tqa-cbt.html"><i>more >> </i></a>
+                    <a href="../views/works/jfc-tqa-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
+            <img src="../images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
             <div class="overlay">
                 <h2>Patikim, Pokie - Contributions<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/patikim-pokie-contributions.html"><i>more >> </i></a>
+                    <a href="../views/works/patikim-pokie-contributions.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/timy0.png" alt="Till I Met You - Contributions">
+            <img src="../images/works/timy0.png" alt="Till I Met You - Contributions">
             <div class="overlay">
                 <h2>Till I Met You - Contributions<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="./works/timy-contributions.html"><i>more >> </i></a>
+                    <a href="../views/works/timy-contributions.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
+            <img src="../images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
             <div class="overlay">
                 <h2>Metro Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="./works/metro-magazine-compre.html"><i>more >> </i></a>
+                    <a href="../views/works/metro-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
+            <img src="../images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
             <div class="overlay">
                 <h2>Manila Zoo Wayfinding Style Guide<br><span>Branding</span></h2>
                 <p>
-                    <a href="./works/manila-zoo-wayfinding.html"><i>more >> </i></a>
+                    <a href="../views/works/manila-zoo-wayfinding.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/vectorized0.png" alt="Vectorized">
-            <div class="overlay">
-                <h2>Vectorized Portraits<br><span>Digital Illustration</span></h2>
-                <p>
-                    <a href="./works/vectorized-portraits.html"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="./images/works/hfinfographic0.png" alt="Patikim, Pokie!">
+            <img src="../images/works/hfinfographic0.png" alt="Patikim, Pokie!">
             <div class="overlay">
                 <h2>10 Hunger Facts for 2014<br><span>Infographic</span></h2>
                 <p>
-                    <a href="./works/10-hunger-facts-for-2014.html"><i>more >> </i></a>
+                    <a href="../views/works/10-hunger-facts-for-2014.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/sscompre0.jpg" alt="StarStudio Magazine Compre">
+            <img src="../images/works/sscompre0.jpg" alt="StarStudio Magazine Compre">
             <div class="overlay">
                 <h2>StarStudio Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="./works/starstudio-magazine-compre.html"><i>more >> </i></a>
+                    <a href="../views/works/starstudio-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/highspeed0.jpg" alt="High Speed">
+            <img src="../images/works/highspeed0.jpg" alt="High Speed">
             <div class="overlay">
                 <h2>High Speed<br><span>Photography</span></h2>
                 <p>
-                    <a href="./works/high-speed.html"><i>more >> </i></a>
+                    <a href="../views/works/high-speed.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/nsmsinfographic0.jpg" alt="Social Media Statistics">
+            <img src="../images/works/nsmsinfographic0.jpg" alt="Social Media Statistics">
             <div class="overlay">
                 <h2>New Social Media Statistics<br><span>Infographic</span></h2>
                 <p>
-                    <a href="./works/new-social-media-statistics.html"><i>more >> </i></a>
+                    <a href="../views/works/new-social-media-statistics.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
+            <img src="../images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
             <div class="overlay">
                 <h2>Earth Hour Interactive Poster<br><span>Print Design</span></h2>
                 <p>
-                    <a href="./works/earth-hour-interactive-poster.html"><i>more >> </i></a>
+                    <a href="../views/works/earth-hour-interactive-poster.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
+            <img src="../images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
             <div class="overlay">
                 <h2>University of Santo Tomas Photowalk<br><span>Photography</span></h2>
                 <p>
-                    <a href="./works/ust-photowalk.html"><i>more >> </i></a>
+                    <a href="../views/works/ust-photowalk.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <!-- <div class="item">
-            <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
+            <img src="../images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
             <div class="overlay">
                 <h2>Free Ad Layouts<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="./works/free-ad-layouts.html"><i>more >> </i></a>
+                    <a href="../views/works/free-ad-layouts.html"><i>more >> </i></a>
                 </p>
             </div>
         </div> -->
         <div class="item">
-            <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
+            <img src="../images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
                 <h2>Bruno Mars Discography<br><span>Infographic</span></h2>
                 <p>
-                    <a href="./works/bruno-mars-discography.html"><i>more >> </i></a>
+                    <a href="../views/works/bruno-mars-discography.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <!-- <div class="item">
-            <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
+            <img src="../images/works/sugarhiccups0.png" alt="Sugar Hiccups">
             <div class="overlay">
                 <h2>Sugar Hiccups<br><span>Web Design</span></h2>
                 <p>
-                    <a href="./works/sugar-hiccups.html"><i>more >> </i></a>
+                    <a href="../views/works/sugar-hiccups.html"><i>more >> </i></a>
                 </p>
             </div>
         </div> -->
         <div class="item">
-            <img src="./images/works/jenchateau0.jpg" alt="Jen Chateau">
+            <img src="../images/works/jenchateau0.jpg" alt="Jen Chateau">
             <div class="overlay">
                 <h2>Jen Chateau<br><span>Photography</span></h2>
                 <p>
-                    <a href="./works/jen-chateau.html"><i>more >> </i></a>
+                    <a href="../views/works/jen-chateau.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
+            <img src="../images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
             <div class="overlay">
                 <h2>Neptune's Milkshakes & Beyond<br><span>Branding</span></h2>
                 <p>
-                    <a href="./works/neptunes-milkshakes-&-beyond.html"><i>more >> </i></a>
+                    <a href="../views/works/neptunes-milkshakes-&-beyond.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
-    
+        <div class="item">
+            <img src="../images/works/vectorized0.png" alt="Vectorized">
+            <div class="overlay">
+                <h2>Vectorized Portraits<br><span>Digital Illustration</span></h2>
+                <p>
+                    <a href="../views/works/vectorized-portraits.html"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
     </div>
     <div style="height: 50px;"></div>
     <div id="footer">
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
-    <script src="./scripts/works.js"></script>
+    <script src="../scripts/works.js"></script>
 </body>
 </html>
