--- a/views/works/rc-corevalues-cbt.html
+++ b/views/works/rc-corevalues-cbt.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
-    <title>BIANCA | Red Ribbon - Shop Floor Management</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
+    <title>BIANCA | Rocket Concepts - Core Values</title>
 </head>
 
 <body>
-    <a href="#shome" id="back2top"><img src="../images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="../../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="../index.html"><img src="../images/bcm-logo.png"></a>
+        <a id="link1" href="../index.html"><img src="../../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="../index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="../works.html">WORKS</a>
         <a class="links" id="link4" href="../index.html#lcontact">CONTACT</a>
@@ -23,24 +23,23 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/rr-fm0.jpg">
-                <img src="../images/works/rr-fm1.jpg">
-                <img src="../images/works/rr-fm2.jpg">
-                <img src="../images/works/rr-fm3.jpg">
-                <img src="../images/works/rr-fm4.jpg">
-                <img src="../images/works/rr-fm5.jpg">
-                <img src="../images/works/rr-fm6.jpg">
-                <img src="../images/works/rr-fm7.jpg">
-                <img src="../images/works/rr-fm8.jpg">
+                <img src="../../images/works/rc-cv0.jpg">
+                <img src="../../images/works/rc-cv1.jpg">
+                <img src="../../images/works/rc-cv2.jpg">
+                <img src="../../images/works/rc-cv3.jpg">
+                <img src="../../images/works/rc-cv4.jpg">
+                <img src="../../images/works/rc-cv5.jpg">
+                <img src="v../images/works/rc-cv6.jpg">
+                <img src="../../images/works/rc-cv7.jpg">
             </div>
         </div>
         <div class="iside">
             <div class="iside_inner">
-                <h1>Red Ribbon - Shop Floor Management</h1>
+                <h1>Rocket Concepts - Core Values</h1>
                 <h2>Digital Illustration • eLearning Development</h2>
                 <br><br>
-                <p>A Rocket Concepts project with Red Ribbon, a food company in the Philippines.
-                A gamified computer-based training for their employees, complete with voice
+                <p>A Rocket Concepts internal project for website demo purposes. A gamified
+                computer-based training for the employees and potential clients, complete with voice
                 overs, background music and animations. Project preview does not include
                 the training itself as it is confidential. Only some pages of the storyboard are shown.
                 </p>
