--- a/views/works/timy-contributions.html
+++ b/views/works/timy-contributions.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
     <title>BIANCA | Till I Met You - Contributions</title>
 </head>
 
 <body>
-    <a href="#shome" id="back2top"><img src="../images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="../../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="../index.html"><img src="../images/bcm-logo.png"></a>
+        <a id="link1" href="../index.html"><img src="../../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="../index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="../works.html">WORKS</a>
         <a class="links" id="link4" href="../index.html#lcontact">CONTACT</a>
@@ -23,14 +23,14 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/timy1.png">
-                <img src="../images/works/timy2.png">
-                <img src="../images/works/timy3.png">
-                <img src="../images/works/timy4.png">
-                <img src="../images/works/timy5.png">
-                <img src="../images/works/timy6.png">
-                <img src="../images/works/timy7.png">
-                <img src="../images/works/timy8.png">
+                <img src="../../images/works/timy1.png">
+                <img src="../../images/works/timy2.png">
+                <img src="../../images/works/timy3.png">
+                <img src="../../images/works/timy4.png">
+                <img src="../../images/works/timy5.png">
+                <img src="../../images/works/timy6.png">
+                <img src="../../images/works/timy7.png">
+                <img src="../../images/works/timy8.png">
             </div>
         </div>
         <div class="iside">
