--- a/views/works/high-speed.html
+++ b/views/works/high-speed.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
-    <title>BIANCA | Vectorized Portraits</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
+    <title>BIANCA | High Speed</title>
 </head>
 
 <body>
-    <a href="#shome" id="back2top"><img src="../images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="../../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="../index.html"><img src="../images/bcm-logo.png"></a>
+        <a id="link1" href="../index.html"><img src="../../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="../index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="../works.html">WORKS</a>
         <a class="links" id="link4" href="../index.html#lcontact">CONTACT</a>
@@ -23,19 +23,21 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/vectorized1.jpeg">
-                <img src="../images/works/vectorized2.jpeg">
-                <img src="../images/works/vectorized3.jpg">
-                <img src="../images/works/vectorized4.jpeg">
+                <img src="../../images/works/highspeed1.jpg">
+                <img src="../../images/works/highspeed2.jpg">
+                <img src="../../images/works/highspeed3.jpg">
+                <img src="../../images/works/highspeed4.jpg">
+                <img src="../../images/works/highspeed5.jpg">
             </div>
         </div>
         <div class="iside">
             <div class="iside_inner">
-                <h1>Vectorized Portraits</h1>
-                <h2>Digital Illustration</h2>
+                <h1>High Speed</h1>
+                <h2>Photography</h2>
                 <br><br>
-                <p>A personal project featuring an unfinished series of vectorized portraits of
-                    family members and sunbursts. 
+                <p>A school project for the Basic Photography course in iAcademy
+                    in the Philippines. The series showcases different techniques
+                    and uses of high speed photography.
                 </p>
             </div>
         </div>
