--- a/views/works/new-social-media-statistics.html
+++ b/views/works/new-social-media-statistics.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
-    <title>BIANCA | Bruno Mars Discography</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
+    <title>BIANCA | New Social Media Statistics</title>
 </head>
 
 <body>
-    <a href="#shome" id="back2top"><img src="../images/arrow.png"></a>
+    <a href="#shome" id="back2top"><img src="../../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="../index.html"><img src="../images/bcm-logo.png"></a>
+        <a id="link1" href="../index.html"><img src="../../images/bcm-logo.png"></a>
         <a class="links" id="link2" href="../index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="../works.html">WORKS</a>
         <a class="links" id="link4" href="../index.html#lcontact">CONTACT</a>
@@ -23,23 +23,25 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <!-- <img src="../images/works/bminfographic1.jpeg"> -->
-                <img src="../images/works/bminfographic2.jpeg">
-                <img src="../images/works/bminfographic3.jpeg">
-                <img src="../images/works/bminfographic4.jpeg">
-                <img src="../images/works/bminfographic5.jpeg">
-                <img src="../images/works/bminfographic6.jpeg">
+                <!-- <img src="../../images/works/nsmsinfographic1.png"> -->
+                <img src="../../images/works/nsmsinfographic2.jpeg">
+                <img src="../../images/works/nsmsinfographic3.jpeg">
+                <img src="../../images/works/nsmsinfographic4.jpeg">
+                <img src="../../images/works/nsmsinfographic5.jpeg">
+                <img src="../../images/works/nsmsinfographic6.png">
+                <img src="../../images/works/nsmsinfographic7.jpeg">
             </div>
         </div>
         <div class="iside">
             <div class="iside_inner">
-                <h1>Bruno Mars Discography</h1>
+                <h1>New Social Media Statistics</h1>
                 <h2>Infographic</h2>
                 <br><br>
                 <p>A school project for the Information Design course in iAcademy
                 in the Philippines. The task was to make an infographic about the
-                discography of the chosen artist, <b><i>Bruno Mars</i></b>.
-                Project preview includes chopped up infographic. <i>Sources cited</i>.
+                provided article with the same title <b><i>New Social Media Statistics
+                You Need to Know</i></b>. Project preview includes chopped up
+                infographic. <i>Sources cited</i>.
                 </p>
             </div>
         </div>
