--- a/views/works/rc-corevalues-cbt.html
+++ b/views/works/rc-corevalues-cbt.html
@@ -29,7 +29,7 @@
                 <img src="../../images/works/rc-cv3.jpg">
                 <img src="../../images/works/rc-cv4.jpg">
                 <img src="../../images/works/rc-cv5.jpg">
-                <img src="v../images/works/rc-cv6.jpg">
+                <img src="../../images/works/rc-cv6.jpg">
                 <img src="../../images/works/rc-cv7.jpg">
             </div>
         </div>
