--- a/styles/main.css
+++ b/styles/main.css
@@ -588,7 +588,7 @@ body {
   resize: vertical;
 }
 
-#scontact .right table input[type=submit] {
+#scontact .right table button[type=submit] {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
   font-size: 0.8em;
