--- a/styles/main.scss
+++ b/styles/main.scss
@@ -486,7 +486,7 @@ body {
                 resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
             }
 
-            input[type=submit] {
+            button[type=submit] {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 500;
                 font-size: 0.8em;
