--- a/views/index.html
+++ b/views/index.html
@@ -123,14 +123,14 @@
             </div>
         </div>
         <div class="right">
-            <form id="contactform" action="action_page.php">
+            <form id="contactform" action="https://formspree.io/xyyervrg" method="POST">
                 <table>
                     <tr>
                         <td class="label">
                             <p>Name : </p>
                         </td>
                         <td class="tbox">
-                            <input type="text" id="fname" name="firstname" placeholder="Your complete name..">
+                            <input type="text" id="name" name="name" placeholder="Your complete name..">
                         </td>
                     </tr>
                     <tr>
@@ -138,7 +138,7 @@
                             <p>Email : </p>
                         </td>
                         <td class="tbox">
-                            <input type="email" id="lname" name="lastname" placeholder="Your email address..">
+                            <input type="email" id="email" name="email" placeholder="Your email address.." required>
                         </td>
                     </tr>                       
                     <tr>
@@ -146,13 +146,15 @@
                             Message : 
                         </td>
                         <td class="tbox">
-                            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                            <textarea id="mesage" name="message" placeholder="Write something.." required style="height:200px"></textarea>
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
                         <td>
-                            <input type="submit" value="SUBMIT">
+                            <p id="status" style="display:block;font-size: 0.7em; color: brown;"></p>
+                        </td>
+                        <td>
+                            <button type="submit" id="submit">SEND</button>
                         </td>
                     </tr>
                 </table>
@@ -163,6 +165,7 @@
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="../scripts/main.js"></script>
 </body>
 </html>
