--- a/styles/main.scss
+++ b/styles/main.scss
@@ -486,19 +486,19 @@ body {
                 resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
             }
 
-            button[type=submit] {
+            button {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 500;
                 font-size: 0.8em;
                 background-color: $bg;
                 color: white;
-                padding: 4% 7%;
+                padding: 3.5% 7%;
                 border: none;
                 border-radius: 7px;
                 cursor: pointer;
             }
 
-            input[type=submit]:hover {
+            button:hover {
                 background-color: $text2;
             }
         }
