--- a/styles/main.scss
+++ b/styles/main.scss
@@ -795,7 +795,7 @@ and (max-width : 414px) {
                     margin: 0 auto;
                 }
 
-                input[type=submit] {
+                button {
                     font-size: 0.55em;
                 }
             }
