--- a/views/index.html
+++ b/views/index.html
@@ -138,7 +138,7 @@
                             <p>Email : </p>
                         </td>
                         <td class="tbox">
-                            <input type="email" id="email" name="email" placeholder="Your email address.." required>
+                            <input type="email" id="email" name="_replyto" placeholder="Your email address.." required>
                         </td>
                     </tr>                       
                     <tr>
@@ -151,10 +151,11 @@
                     </tr>
                     <tr>
                         <td>
-                            <p id="status" style="display:block;font-size: 0.7em; color: brown;"></p>
+                            <p id="status1" style="display:block;font-size: 0.7em; color: brown;"></p>
                         </td>
                         <td>
                             <button type="submit" id="submit">SEND</button>
+                            <p id="status2" style="display:block; font-weight:700; font-size: 0.9em; color: rgb(50, 114, 138);"></p>
                         </td>
                     </tr>
                 </table>
