Edited works section label

--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="label" id="lworks">
-        <h1>featured works</h1>
+        <h1>works</h1>
     </div>
     <div class="sections" id="sworks">
         <div class="item">
